x-overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ html {
   min-height: 100vh;
   scroll-behavior: smooth;
   max-width: 100vw;
-  /* overflow-y: hidden; */
+  overflow-x: hidden;
 }
 
 body {
